--- a/README
+++ b/README
@@ -1,1 +1,3 @@
+Just a place holder for now -
+
 Experimental blog engine written in python. Plan to replace wordpress on mbowcock.com with something else. I don't need all the features of wordpress and feel like some are lacking (code sharing...)
